# localshift

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
skills/design-eval/: SKILL.md
skills/evaluate/: SKILL.md
skills/explore/: SKILL.md
skills/replicate/: SKILL.md
skills/savings/: SKILL.md
src/localshift/: __main__.py  checks.py  cli.py  engine_frontier.py  engine_local.py  ledger.py  spec.py
tasks/: smoke-prompt.md  smoke.yaml
tests/: checks_selfcheck.py  engine_frontier_selfcheck.py  engine_local_wiring.py  ledger_selfcheck.py  spec_selfcheck.py
workloads/smoke/: checks.yaml
