[project]
name = "localshift"
version = "0.1.0"
description = "Migrate proven frontier-AI workloads to local LLMs with a derived, per-workload quality eval — replicate, judge 1v1 vs frontier, cut over what passes."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "typer>=0.12",
  "pyyaml>=6",
  "httpx>=0.27",
  "localharness @ git+https://github.com/ahwurm/localharness@a5fc77222447b8102306d5a6a238797057561cba",
]

[project.scripts]
localshift = "localshift.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localshift"]

[tool.hatch.metadata]
allow-direct-references = true
